--- a/styles/components.css
+++ b/styles/components.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 main {
     border: 1px solid red;
 }
@@ -12,4 +16,23 @@ header {
 
 footer {
     border: 1px solid green;
+}
+
+.static-container header {
+    background-color: gray;
+    color: white;
+}
+
+.header-menu a {
+    text-decoration: none;
+    color: lightgray;
+}
+
+.header-menu a:hover {
+    text-decoration: none;
+    color: white;
+}
+
+main section {
+    border: 1px solid black;
 }
