--- a/styles/typography.css
+++ b/styles/typography.css
@@ -19,12 +19,8 @@ body, table, input {
     font: inherit;
 }
 
-p {
-    padding-bottom: 1.5em;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    margin-bottom: 0.5em;
+p, a {
+    font-size: 1em;
 }
 
 h1 { font-size: 3.5em; }
