--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,5 @@
 @import url('reset.css');
+@import url('definitions.css');
 @import url('typography.css');
 @import url('layout.css');
 @import url('components.css');
