--- a/styles/layout.css
+++ b/styles/layout.css
@@ -45,31 +45,8 @@
 
  
 
-main section:not(#about-me) {
+main section:not(#bio) {
   min-height: calc(100vh - 10rem);
   border: 1px solid black;
   padding: 2rem;
-}
-
-main section article {
-  display: flex;
-  gap: 2rem;
-}
-
-article .picture-container {
-  flex: 1;
-}
-
-article .content-container {
-  flex: 1;
-}
-
-article h2 {
-  text-align: center;
-}
-
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
