--- a/styles/layout.css
+++ b/styles/layout.css
@@ -41,12 +41,17 @@
   height: 5rem;
   padding: 0 2rem;
 }
-
-
  
 
-main section:not(#bio) {
-  min-height: calc(100vh - 10rem);
-  border: 1px solid black;
-  padding: 2rem;
+main section {
+  scroll-margin-top: 11rem;
+}
+
+main section:after {
+  width: 100%;
+  padding: 1rem 0;
+  display: inline-block;
+  text-align: center;
+  color: var(--primary-color);
+  content: "\2756\2756\2756";
 }
