--- a/styles/typography.css
+++ b/styles/typography.css
@@ -21,7 +21,8 @@ h3 { font-size: 2.5em; }
 
 h4 { font-size: 2em; }
 
-h5 { font-size: 1.5em; }
+h5,
+summary { font-size: 1.5em; }
 
 h6 { font-size: 1em; }
 
