--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,7 +1,11 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .dynamic-container {
+  display: flex;
   width: 100%;
   min-height: calc(100vh - 10rem);
-  display: flex;
  
   /* TABLET */
   @media (min-width: 768px) {
@@ -11,19 +15,39 @@
   /* DESKTOP */
   @media (min-width: 1366px) {
     max-width: 85rem;
-    margin: auto;
+    justify-content: center;
   }
 }
 
-main {
-  width: 100%;
-}
 .dynamic-container main {
+  width: 100%;
   flex: 1;
+
   /* TABLET */
   @media (min-width: 768px) {
     flex: 3;
   }
+}
+
+.dynamic-container main section {
+  scroll-margin-top: 11rem;
+}
+
+.dynamic-container main section h2 {
+  text-align: center;
+  height: 5rem;
+  margin-bottom: 1rem;
+  padding: 0 2rem;
+  color: var(--primary-color);
+}
+
+.dynamic-container main section:after {
+  width: 100%;
+  padding: 1rem 0;
+  display: inline-block;
+  text-align: center;
+  color: var(--primary-color);
+  content: "\2756\2756\2756";
 }
 
 .dynamic-container aside {
@@ -31,30 +55,11 @@ main {
 
   /* TABLET */
   @media (min-width: 768px) {
-    display: block;
+    display: flex;
     flex: 1;
   }
 }
 
 .static-container {
   width: 100%;
-}
-
-.static-container footer {
-  height: 5rem;
-  padding: 0 2rem;
-}
- 
-
-main section {
-  scroll-margin-top: 11rem;
-}
-
-main section:after {
-  width: 100%;
-  padding: 1rem 0;
-  display: inline-block;
-  text-align: center;
-  color: var(--primary-color);
-  content: "\2756\2756\2756";
 }
