--- a/styles/component-styles/footer.css
+++ b/styles/component-styles/footer.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 5rem;
     background-color: var(--primary-color);
     color: var(--secondary-color);
 }
