--- a/styles/component-styles/cources-and-certificates.css
+++ b/styles/component-styles/cources-and-certificates.css
@@ -5,17 +5,17 @@
   padding: 0 1rem;
 }
 
-.courses-and-ceriticates .carousel-container {
+.carousel-container {
   width: 100%;
 }
 
-.courses-and-ceriticates .carousel-indicators {
+.carousel-indicators {
   width: 100%;
   display: flex;
   justify-content: center;
 }
 
-.courses-and-ceriticates .carousel-indicators label {
+.carousel-indicators label {
   display: inline-block;
   text-align: center;
   border: 2px solid var(--secondary-color);
@@ -23,16 +23,16 @@
   cursor: pointer;
   width: 1rem;
   height: 1rem;
-  margin: 0.5rem 0 0 0.5rem;
+  margin: 0.5rem 0 0 0.5rem ;
   border-radius: 50%;
 }
 
-.courses-and-ceriticates .carousel-indicators label:hover {
+.carousel-indicators label:hover {
   border: 2px solid var(--primary-color);
   background-color: var(--secondary-color);
 }
 
-.courses-and-ceriticates .slide-container {
+.slide-container {
   width: 100%;
   height: 60vh;
   overflow: hidden;
@@ -41,40 +41,39 @@
   scroll-margin-top: 26rem;
 }
 
-.courses-and-ceriticates .slide-container .slide {
-  width: 100%;
+.slide-container .slide {
   flex: 0 0 100%;
   transition: margin-left 1s;
+}
+
+.slide {
   background: var(--secondary-color);
   border: 2px solid var(--primary-color);
   cursor: pointer;
 }
 
-.courses-and-ceriticates .slide div {
+.slide div {
   padding: 1rem;
   height: 50%;
   transition: height 1s;
   background: var(--secondary-color);
   overflow: hidden;
-  text-overflow: ellipsis;
 }
 
-.courses-and-ceriticates .slide div ul {
+.slide div ul  {
   list-style-type: none;
-
+ 
 }
 
-.courses-and-ceriticates .slide div:nth-of-type(2) ul li {
+.slide div:nth-of-type(2) ul li  {
   margin-bottom: 0.5rem;
-
+ 
 }
-
-.courses-and-ceriticates .slide img {
+.slide img {
   object-fit: contain;
 }
 
-.courses-and-ceriticates .slide div:nth-of-type(2):active,
-.courses-and-ceriticates .slide div:nth-of-type(1):active {
+.slide div:active {
   position: fixed;
   height: 100%;
   top: 0;
@@ -82,44 +81,40 @@
   width: 100%;
 }
 
-.courses-and-ceriticates .slide div:first-of-type:active {
+.slide div:first-of-type:active {
   padding: 0;
 }
-.courses-and-ceriticates .slide div:last-of-type .description {
-  display: none;
+.slide div:last-of-type:active {
+  padding: 2rem;
+  height: 100%;
 }
-.courses-and-ceriticates .slide div:last-of-type:active .description {
-  padding: 1rem;
+
+.slide div:last-of-type:active .description {
   display: block;
 }
 
-.courses-and-ceriticates input {
+input {
   opacity: 0;
   height: 0;
   width: 0;
 }
 
-.courses-and-ceriticates input:nth-of-type(4):checked~.slide-container .slide:first-of-type {
+input:nth-of-type(4):checked~.slide-container .slide:first-of-type {
   margin-left: -300%;
 }
 
-.courses-and-ceriticates input:nth-of-type(3):checked~.slide-container .slide:first-of-type {
+input:nth-of-type(3):checked~.slide-container .slide:first-of-type {
   margin-left: -200%;
 }
 
-.courses-and-ceriticates input:nth-of-type(2):checked~.slide-container .slide:first-of-type {
+input:nth-of-type(2):checked~.slide-container .slide:first-of-type {
   margin-left: -100%;
 }
 
-.courses-and-ceriticates input:nth-of-type(1):checked~.slide-container .slide:first-of-type {
+input:nth-of-type(1):checked~.slide-container .slide:first-of-type {
   margin-left: 0%;
 }
 
-.courses-and-ceriticates .description {
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
+.description {
+ display: none;
 }
-
-/* TO BE FIXED */
