--- a/styles/component-styles/header.css
+++ b/styles/component-styles/header.css
@@ -1,27 +1,36 @@
-.static-container header {
+.main-header {
+  position: sticky;
+  top: 0;
+}
+
+.main-header header {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
-  height: 5rem;
   padding: 0 2rem;
   color: var(--secondary-color);
   background-color: var(--primary-color);
+  border-bottom: 2px solid var(--secondary-color); 
 }
 
-/* Logo */
-.logo {
-  text-wrap: nowrap;
+.main-header .logo {
+  width: 100%;
+  text-align: center;
 }
-/* Logo */
 
-/* Header button */
-.header-wrapper button {
+.main-header .header-wrapper {
+  margin: auto;
+}
+
+.main-header .header-wrapper button {
+  position: relative;
   background-color: inherit;
   cursor: pointer;
   padding: 1rem;
 }
 
-.header-wrapper button div {
+.main-header .header-wrapper button div {
   width: 4.5rem;
   height: 0.5rem;
   background-color: var(--secondary-color);
@@ -29,51 +38,46 @@
   transition: right 1s ease-in-out;
 }
 
-.header-wrapper button:hover div {
-  background-color: var(--secondary-color);
-  transform: initial;
-}
-
-.header-wrapper:hover button div:nth-of-type(1) {
+.main-header .header-wrapper:hover button div:nth-of-type(1) {
   transform: translate(0, 1rem) rotate(-45deg);
 }
 
-.header-wrapper:hover button div:nth-of-type(2) {
+.main-header .header-wrapper:hover button div:nth-of-type(2) {
   opacity: 0;
 }
 
-.header-wrapper:hover button div:nth-of-type(3) {
+.main-header .header-wrapper:hover button div:nth-of-type(3) {
   transform: translate(0, -1rem) rotate(45deg);
 }
-/* Header button */
 
-/* Header menu */
-.header-menu {
+.main-header .header-menu {
   position: absolute;
-  height: auto;
-  top: 5rem;
-  right: -100%;
+  right: 0;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 0;
+  height: auto;
   text-align: center;
+  transition: width 1s;
+  overflow: hidden;
   background-color: var(--primary-color);
-  transition: 1s all;
 }
 
-.header-menu a {
-  color: var(--secondary-color);
-  text-decoration: none;
-  border: 1px solid var(--secondary-color);
+.main-header .header-wrapper:hover .header-menu {
+  width: 100%;
+  overflow: auto;
+}
+
+.main-header .header-menu a {
   padding: 1rem;
+  text-decoration: none;
+  white-space: nowrap;
+  color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
 }
 
-.header-wrapper:hover .header-menu {
-  right: 0;
-}
-
-.header-menu a:hover {
+.main-header .header-menu a:hover {
   color: var(--primary-color);
   background-color: var(--secondary-color);
+  border: 1px solid var(--primary-color);
 }
-/* Header menu */
