--- a/styles/typography.css
+++ b/styles/typography.css
@@ -1,32 +1,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 
 html {
-    /* MOBILE */
-    font: 12px/1.5  'system-ui', 'sans-serif';
+    font: 12px/1.5 'system-ui', 'sans-serif';
 }
 
-body, table, input {
+body,
+table,
+input {
     font: inherit;
 }
 
-p, a {
+p,
+a {
     font-size: 1em;
 }
 
-h1 { font-size: 3.5em; }
+h1 {
+    font-size: 3.5em;
+}
 
-h2 { font-size: 3em; }
+h2 {
+    font-size: 3em;
+}
 
-h3 { font-size: 2.5em; }
+h3 {
+    font-size: 2.5em;
+}
 
-h4 { font-size: 2em; }
+h4 {
+    font-size: 2em;
+}
 
-h5 { font-size: 1.5em; }
+h5,
+summary {
+    font-size: 1.5em;
+}
 
-h6 { font-size: 1em; }
-
-.light { font-weight: 300; }
-
-.normal { font-weight: 400; }
-
-.bold { font-weight: 700; }
+.bold {
+    font-weight: 700;
+}
