--- a/styles/component-styles/cources-and-certificates.css
+++ b/styles/component-styles/cources-and-certificates.css
@@ -34,7 +34,8 @@
 
 .courses-and-ceriticates .carousel-container .slide-container {
   width: 100%;
-  height: 60vh;
+  height: 29rem;
+  min-height: fit-content;
   overflow: hidden;
   display: flex;
   scroll-behavior: smooth;
@@ -46,7 +47,6 @@
   transition: margin-left 1s;
   background: var(--secondary-color);
   border: 2px solid transparent;
-  cursor: pointer;
 }
 
 .courses-and-ceriticates .carousel-container .slide-container .slide:hover {
@@ -54,47 +54,78 @@
 }
 
 .courses-and-ceriticates .carousel-container .slide-container .slide div {
+  cursor: pointer;
   padding: 1rem;
   height: 50%;
   transition: height 1s;
   background: var(--secondary-color);
   overflow: hidden;
 }
+.courses-and-ceriticates .carousel-container .slide-container .slide label {
+  height: 50%;
+  transition: height 1s;
 
+}
+
+.courses-and-ceriticates .carousel-container .slide-container .slide div ul,
+.courses-and-ceriticates .carousel-container .slide-container .slide div img {
+  cursor: pointer;
+  
+}
+.courses-and-ceriticates .carousel-container .slide-container .slide div img {
+  object-fit: contain;
+  scale: 1;
+  height: 90%;
+  transition: scale 1s;
+}
 .courses-and-ceriticates .carousel-container .slide-container .slide div ul {
   list-style-type: none;
+}
+
+
+.courses-and-ceriticates .carousel-container .slide-container .slide div img:hover {
+  scale: 1.1;
 }
 
 .courses-and-ceriticates .carousel-container .slide-container .slide div:nth-of-type(2) ul li {
   margin-bottom: 0.5rem;
 }
 
-.courses-and-ceriticates .carousel-container .slide-container .slide div:active {
+.courses-and-ceriticates .carousel-container .slide-container .slide input:nth-of-type(1):checked ~ label  ,
+.courses-and-ceriticates .carousel-container .slide-container .slide input:nth-of-type(2):checked ~ label  {
+  display: inline-block;
   position: fixed;
   height: 100%;
   left: 0;
+  top: 6rem;
   width: 100%;
   z-index: 1;
+  background-color: var(--secondary-color);
 }
 
-.courses-and-ceriticates .carousel-container .slide-container .slide div:first-of-type:active {
-  top: 10rem;
+.courses-and-ceriticates .carousel-container .slide-container .slide div:last-of-type input:checked~label  {
   padding: 0;
 }
 
-.courses-and-ceriticates .carousel-container .slide-container .slide div:first-of-type:active img {
-  margin-top: 2rem;
+.courses-and-ceriticates .carousel-container .slide-container .slide div:first-of-type input:checked~label img {
+  padding:2rem;
   height: 70%;
+  object-fit: contain;
 }
 
-.courses-and-ceriticates .carousel-container .slide-container .slide div:last-of-type:active {
-  top: 10rem;
+.courses-and-ceriticates .carousel-container .slide-container .slide div input:checked~label {
   padding: 2rem;
   height: 100%;
 }
 
-.courses-and-ceriticates .carousel-container .slide-container .slide div:last-of-type:active .description {
+.courses-and-ceriticates .carousel-container .slide-container .slide div:last-of-type input:checked~label .description {
   display: block;
+  padding: 1rem;
+}
+
+.courses-and-ceriticates .carousel-container .slide-container .slide div:last-of-type input:checked~label {
+  display: block;
+  padding: 1rem;
 }
 
 .courses-and-ceriticates .carousel-container .slide-container .slide img {
