--- a/styles/component-styles/education.css
+++ b/styles/component-styles/education.css
@@ -5,27 +5,34 @@
   padding: 0 1rem 1rem;
 }
 
-.education article {
+.education label {
+  display: inline-block;
+  width: 100%;
+}
+
+.education label article {
   width: 100%;
   cursor: pointer;
   border:  2px solid var(--primary-color);
   border-radius: 1rem;
 }
 
-.education article p {
+.education label article p {
   display: none;
 }
 
-.education article:hover h4 { 
+.education label  article:hover h4 { 
   background-color: var(--primary-color);
   color: var(--secondary-color);
   border-radius: 1rem 1rem 0 0;
 }
 
-.education article:hover p {
+.education input:nth-of-type(1):checked~label:nth-of-type(1) p,
+.education input:nth-of-type(2):checked~label:nth-of-type(2) p,
+.education input:nth-of-type(3):checked~label:nth-of-type(3) p {
   display: block;
 }
 
-.education article ul {
+.education label  article ul {
   list-style: none;
 }
