--- a/styles/component-styles/experience.css
+++ b/styles/component-styles/experience.css
@@ -20,32 +20,39 @@
   background-color: var(--primary-color);
 }
 
-.work-experience details .details-container {
-  height: 50%;
-  padding: 0 1rem 1rem;
+.work-experience details label {
   transition: height 1s;
+  height: 50%;
   cursor: pointer;
 }
 
-.work-experience details .details-container:active {
+.work-experience details label p {
+  margin: 0 2rem 2rem;
+}
+
+.work-experience input:nth-of-type(1):checked~label:nth-of-type(1),
+.work-experience input:nth-of-type(2):checked~label:nth-of-type(2),
+.work-experience input:nth-of-type(3):checked~label:nth-of-type(3) {
   display: block;
   position: fixed;
-  top: 10rem;
+  top: 6rem;
   left: 0;
   height: 100%;
-  padding: 2rem;
+  padding: 1rem;
   background-color: var(--secondary-color);
 }
 
-.work-experience details .details-container:active p {
-  display: block;
-}
-
-.work-experience details .details-container p {
+.work-experience details label p {
   display: -webkit-box;
   -webkit-line-clamp: 10;
   -webkit-box-orient: vertical;
   overflow: hidden;
+}
+
+.work-experience input:nth-of-type(1):checked~label:nth-of-type(1) p,
+.work-experience input:nth-of-type(2):checked~label:nth-of-type(2) p,
+.work-experience input:nth-of-type(3):checked~label:nth-of-type(3) p {
+  display: block;
 }
 
 .work-experience details ul {
@@ -55,4 +62,12 @@
 
 .work-experience details li {
   margin-bottom: 0.5rem;
+}
+
+.work-experience details .details-container{
+  border-top: 1px solid transparent;
+}
+
+.work-experience details .details-container:hover{
+  border-top: 1px solid var(--primary-color);
 }
