--- a/styles/component-styles/header.css
+++ b/styles/component-styles/header.css
@@ -5,8 +5,7 @@
 
 .main-header header {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   padding: 0 2rem;
   color: var(--secondary-color);
@@ -15,38 +14,43 @@
 }
 
 .main-header .logo {
+  font-size: 2vw;
   width: 100%;
-  text-align: center;
+  text-align: start;
 }
 
 .main-header .header-wrapper {
   margin: auto;
 }
 
-.main-header .header-wrapper button {
+.main-header .header-wrapper label {
   position: relative;
   background-color: inherit;
   cursor: pointer;
   padding: 1rem;
 }
 
-.main-header .header-wrapper button div {
+.main-header .header-wrapper label div {
   width: 4.5rem;
   height: 0.5rem;
   background-color: var(--secondary-color);
   margin: 0.5rem 0;
-  transition: right 1s ease-in-out;
+  transition: all 1s ease-in-out;
 }
 
-.main-header .header-wrapper:hover button div:nth-of-type(1) {
+.main-header .header-wrapper input {
+  display: none;
+}
+
+.main-header .header-wrapper input:nth-of-type(1):checked~label div:nth-of-type(1) {
   transform: translate(0, 1rem) rotate(-45deg);
 }
 
-.main-header .header-wrapper:hover button div:nth-of-type(2) {
+.main-header .header-wrapper input:nth-of-type(1):checked~label div:nth-of-type(2) {
   opacity: 0;
 }
 
-.main-header .header-wrapper:hover button div:nth-of-type(3) {
+.main-header .header-wrapper input:nth-of-type(1):checked~label div:nth-of-type(3) {
   transform: translate(0, -1rem) rotate(45deg);
 }
 
@@ -63,7 +67,7 @@
   background-color: var(--primary-color);
 }
 
-.main-header .header-wrapper:hover .header-menu {
+.main-header .header-wrapper input:nth-of-type(1):checked~ .header-menu {
   width: 100%;
   overflow: auto;
 }
