--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,5 +1,7 @@
 html {
   scroll-behavior: smooth;
+  user-select: none;
+  -moz-user-select: none;
 }
 
 .dynamic-container {
@@ -72,4 +74,8 @@ img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+input {
+  display: none;
 }
