--- a/styles/component-styles/cources-and-certificates.css
+++ b/styles/component-styles/cources-and-certificates.css
@@ -34,7 +34,7 @@
 
 .courses-and-ceriticates .carousel-container .slide-container {
   width: 100%;
-  height: 29rem;
+  height: 36rem;
   min-height: fit-content;
   overflow: hidden;
   display: flex;
@@ -101,6 +101,16 @@
   width: 100%;
   z-index: 1;
   background-color: var(--secondary-color);
+}
+
+.courses-and-ceriticates .carousel-container .slide-container .slide input:checked ~ label .toggle-content  {
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
+}
+
+.courses-and-ceriticates .carousel-container .slide-container .slide input:checked ~ label .toggle-content::after  {
+  content: "Close!";
 }
 
 .courses-and-ceriticates .carousel-container .slide-container .slide div:last-of-type input:checked~label  {
