--- a/styles/component-styles/experience.css
+++ b/styles/component-styles/experience.css
@@ -42,6 +42,20 @@
   background-color: var(--secondary-color);
 }
 
+.work-experience input:nth-of-type(1):checked~label:nth-of-type(1) .toggle-content:nth-of-type(1),
+.work-experience input:nth-of-type(2):checked~label:nth-of-type(2) .toggle-content:nth-of-type(2),
+.work-experience input:nth-of-type(3):checked~label:nth-of-type(3) .toggle-content:nth-of-type(3) {
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
+}
+
+.work-experience input:nth-of-type(1):checked~label:nth-of-type(1) .toggle-content:nth-of-type(1)::after,
+.work-experience input:nth-of-type(2):checked~label:nth-of-type(2) .toggle-content:nth-of-type(2)::after,
+.work-experience input:nth-of-type(3):checked~label:nth-of-type(3) .toggle-content:nth-of-type(3)::after {
+  content: "Close!";
+}
+
 .work-experience details label p {
   display: -webkit-box;
   -webkit-line-clamp: 10;
