--- a/styles/components.css
+++ b/styles/components.css
@@ -7,3 +7,23 @@
 @import url('component-styles/footer.css');
 @import url('component-styles/contacts.css');
 @import url('component-styles/skills.css');
+
+.toggle-content {
+    display:  none;
+
+    @media (any-hover: none) {
+        display: block;
+        height: auto;
+        margin: 1rem auto;
+        padding: 1rem;
+        border-radius: 1rem;
+        width: fit-content;
+        color: var(--primary-color);
+        border: 1px solid var(--primary-color);
+    }
+}
+
+.toggle-content::after {
+    content: "Read more!";
+}
+
