--- a/styles/components.css
+++ b/styles/components.css
@@ -11,7 +11,7 @@
 .toggle-content {
     display:  none;
 
-    @media (any-hover: none) {
+    @media (any-pointer: coarse) {
         display: block;
         height: auto;
         margin: 1rem auto;
