--- a/styles/header.css
+++ b/styles/header.css
@@ -8,32 +8,6 @@
   background-color: var(--primary-color);
 }
 
-/* Header wrapper */
-.header-wrapper:hover .header-menu {
-  top: 5rem;
-}
-
-.header-wrapper:hover .header-menu a{
-  opacity: 1;
-}
-
-.header-wrapper:hover button div:nth-of-type(1) {
-  transform: translate(0, 1rem) rotate(-45deg);
-}
-
-.header-wrapper:hover button div:nth-of-type(2) {
-  opacity: 0;
-}
-
-.header-wrapper:hover button div:nth-of-type(3) {
-  transform: translate(0, -1rem) rotate(45deg);
-}
-
-.header-wrapper:hover .header-menu {
-  top: 5rem
-}
-/* Header wrapper */
-
 /* Logo */
 .logo {
   text-wrap: nowrap;
@@ -54,12 +28,6 @@
   margin: 0.5rem 0;
   transition: all 1s;
 }
-
-.header-wrapper button:hover div {
-  background-color: var(--secondary-color);
-  transform: initial;
-}
-
 /* Header button */
 
 /* Header menu */
@@ -81,12 +49,43 @@
   text-decoration: none;
   border: 1px solid var(--secondary-color);
   padding: 1rem;
-  
 }
-
-.header-menu a:hover {
-  color: var(--primary-color);
-  background-color: var(--secondary-color);
-}
-
 /* Header menu */
+
+@media (any-pointer: coarse) {
+  /* Header wrapper */
+  .header-wrapper:hover .header-menu {
+    top: 5rem;
+  }
+
+  .header-wrapper:hover .header-menu a {
+    opacity: 1;
+  }
+
+  .header-wrapper:hover button div:nth-of-type(1) {
+    transform: translate(0, 1rem) rotate(-45deg);
+  }
+
+  .header-wrapper:hover button div:nth-of-type(2) {
+    opacity: 0;
+  }
+
+  .header-wrapper:hover button div:nth-of-type(3) {
+    transform: translate(0, -1rem) rotate(45deg);
+  }
+
+  .header-wrapper:hover .header-menu {
+    top: 5rem;
+  }
+
+  .header-wrapper button:hover div {
+    background-color: var(--secondary-color);
+    transform: initial;
+  }
+  /* Header wrapper */
+
+  .header-menu a:hover {
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
+  }
+}
