--- a/styles/component-styles/education.css
+++ b/styles/component-styles/education.css
@@ -21,12 +21,6 @@
   display: none;
 }
 
-.education label  article:hover h4 { 
-  background-color: var(--primary-color);
-  color: var(--secondary-color);
-  border-radius: 1rem 1rem 0 0;
-}
-
 .education input:nth-of-type(1):checked~label:nth-of-type(1) p,
 .education input:nth-of-type(2):checked~label:nth-of-type(2) p,
 .education input:nth-of-type(3):checked~label:nth-of-type(3) p {
@@ -49,4 +43,12 @@
 
 .education label  article ul {
   list-style: none;
+}
+
+@media (any-pointer: coarse) {
+  .education label  article:hover h4 { 
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    border-radius: 1rem 1rem 0 0;
+  }
 }
