--- a/styles/component-styles/experience.css
+++ b/styles/component-styles/experience.css
@@ -15,11 +15,6 @@
   border-radius: 1rem 1rem 0 0;
 }
 
-.work-experience details:hover summary {
-  color: var(--secondary-color);
-  background-color: var(--primary-color);
-}
-
 .work-experience details label {
   transition: height 1s;
   height: 50%;
@@ -76,4 +71,11 @@
 
 .work-experience details li {
   margin-bottom: 0.5rem;
+}
+
+@media (any-pointer: coarse) {
+  .work-experience details:hover summary {
+    color: var(--secondary-color);
+    background-color: var(--primary-color);
+  }
 }
