Adjusting hover logic for touch and not touch devices

--- a/styles/component-styles/contacts.css
+++ b/styles/component-styles/contacts.css
@@ -23,7 +23,7 @@
   width: 100%;
 }
 
-@media (any-pointer: coarse) {
+@media (any-pointer:  fine) {
   .contacts ul li a:hover {
     text-decoration: none;
     color: var(--primary-color);
