--- a/styles/component-styles/header.css
+++ b/styles/component-styles/header.css
@@ -84,12 +84,12 @@
   border: 1px solid var(--secondary-color);
 }
 
-@media (any-pointer: coarse) {
+@media (any-pointer:  fine) {
   .main-header .header-wrapper label:hover {
     border: 1px solid var(--secondary-color);
     border-radius: 1rem;
   }
-  
+
   .main-header .header-menu a:hover {
     color: var(--primary-color);
     background-color: var(--secondary-color);
