--- a/styles/component-styles/cources-and-certificates.css
+++ b/styles/component-styles/cources-and-certificates.css
@@ -87,7 +87,7 @@
   position: fixed;
   height: 100%;
   left: 0;
-  top: 6rem;
+  top: 0;
   width: 100%;
   z-index: 1;
   background-color: var(--secondary-color);
