--- a/styles/component-styles/experience.css
+++ b/styles/component-styles/experience.css
@@ -23,6 +23,10 @@
 
 .work-experience details label p {
   margin: 0 2rem 2rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 10;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .work-experience input:nth-of-type(1):checked~label:nth-of-type(1),
@@ -30,7 +34,7 @@
 .work-experience input:nth-of-type(3):checked~label:nth-of-type(3) {
   display: block;
   position: fixed;
-  top: 6rem;
+  top: 0;
   left: 0;
   height: 100%;
   padding: 1rem;
@@ -49,13 +53,6 @@
 .work-experience input:nth-of-type(2):checked~label:nth-of-type(2) .toggle-content:nth-of-type(2)::after,
 .work-experience input:nth-of-type(3):checked~label:nth-of-type(3) .toggle-content:nth-of-type(3)::after {
   content: "Close!";
-}
-
-.work-experience details label p {
-  display: -webkit-box;
-  -webkit-line-clamp: 10;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
 }
 
 .work-experience input:nth-of-type(1):checked~label:nth-of-type(1) p,
