--- a/styles/component-styles/header.css
+++ b/styles/component-styles/header.css
@@ -23,7 +23,8 @@
   margin: auto;
 }
 
-.main-header .header-wrapper label {
+.main-header .header-wrapper .toggle-button {
+
   display: inline-block;
   position: relative;
   background-color: inherit;
@@ -34,7 +35,7 @@
   transition: all 1s ease-in-out;
 }
 
-.main-header .header-wrapper label div {
+.main-header .header-wrapper .toggle-button div {
   width: 4.5rem;
   height: 0.5rem;
   background-color: var(--secondary-color);
@@ -45,16 +46,16 @@
 .main-header .header-wrapper input {
   display: none;
 }
-
-.main-header .header-wrapper input:nth-of-type(1):checked~label div:nth-of-type(1) {
+ 
+.main-header .header-wrapper input:nth-of-type(1):checked~.toggle-button:focus label div:nth-of-type(1) {
   transform: translate(0, 1rem) rotate(-45deg);
 }
 
-.main-header .header-wrapper input:nth-of-type(1):checked~label div:nth-of-type(2) {
+.main-header .header-wrapper input:nth-of-type(1):checked~.toggle-button:focus label div:nth-of-type(2) {
   opacity: 0;
 }
 
-.main-header .header-wrapper input:nth-of-type(1):checked~label div:nth-of-type(3) {
+.main-header .header-wrapper input:nth-of-type(1):checked~.toggle-button:focus label div:nth-of-type(3) {
   transform: translate(0, -1rem) rotate(45deg);
 }
 
@@ -71,7 +72,7 @@
   background-color: var(--primary-color);
 }
 
-.main-header .header-wrapper input:nth-of-type(1):checked~ .header-menu {
+.main-header .header-wrapper input:nth-of-type(1):checked~.toggle-button:focus~.header-menu {
   width: 100%;
   overflow: auto;
 }
